--- a/Beginning/index.html
+++ b/Beginning/index.html
@@ -14,6 +14,6 @@
     <title>React ⚛️</title>
   </head>
   <body>
-    <h1>Getting Started with React</h1>
+    <h1>Getting Started with React😎</h1>
   </body>
 </html>
